<resources>
    <string name="app_name">AppBienvenidos</string>
    <string name="welcome_retour">Bon retour parmi nous !</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="mdp_oublier">Mot de passe oublié ?</string>
    <string name="se_connecter">Se connecter</string>
    <string name="pas_encore_de_compte">Pas encore de compte ?</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="continuer">Continuer</string>
    <string name="passer">Passer</string>
    <string name="parametre">Paramètres</string>
    <string name="compte">Compte</string>
    <string name="logout">Se déconnecter</string>
    <string name="profile">Profil</string>
    <string name="statistique">Aperçu de mes contributions</string>
    <string name="spots_partages">Spots Partagés</string>
    <string name="nombre_de_likes">Nombre de likes</string>
    <string name="avis_moyens">Avis Moyens</string>
    <string name="mes_spots_et_itineraires"><![CDATA[Mes Spots & Itinéraires]]></string>
    <string name="aucun_spot">Aucun spot publié pour le moment</string>
    <string name="actions_rapides">Actions Rapides</string>
    <string name="add_spot">Créer un nouveau Spot</string>
    <string name="slogan">Le monde à portée de main</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="ville_pays">Ville, Pays</string>
    <string name="role">Rôle</string>
    <string name="voyageur">Voyageur</string>
    <string name="local">Local</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="as_tu_d_j_un_compte">As-tu déjà un compte ?</string>
    <string name="login">Se connecter</string>
    <string name="nom_du_place">Nom du place</string>
    <string name="adresse">Adresse</string>
    <string name="actions">Actions :</string>
    <string name="poser_une_question">Poser une question</string>
    <string name="partager">Partager</string>
    <string name="description">Description :</string>
    <string name="localisation">Localisation :</string>
    <string name="slogane">Le monde à portée de main</string>
    <string name="logup">S\'insrire</string>
    <string name="log_in">Se connecter</string>
    <string name="explorer">Explorer</string>
    <string name="devenir_un_guide">Devenir un Guide</string>
    <string name="specialiter">Vos spécialités (ex: Histoire, Cuisine,...)</string>
    <string name="langues">Langues parlées</string>
    <string name="ville_desservie">Ville desservie</string>
    <string name="tarif_horaire_mad">Tarif horaire (MAD)</string>
    <string name="votre_num_ros_de_t_l_phone">Votre numéros de Téléphone</string>
    <string name="rechercher">Rechercher</string>
    <string name="pas_de_discussion_encore">Pas de discussion encore</string>
    <string name="changer_le_mot_de_passe">Changer le mot de passe</string>
    <string name="mot_de_passe_actuel">Mot de passe actuel</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="confirmer_nouveau_mot_de_passe">Confirmer nouveau mot de passe</string>
    <string name="modifier_le_profil">Modifier le profil</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="_nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="nom_">Nom</string>
    <string name="preenom">Prénom</string>
    <string name="location">Localisation</string>
    <string name="ville">Ville, Pays</string>
    <string name="e_mail">E-mail</string>
    <string name="l_adresse_email_ne_peut_pas_tre_modifi_e">L\'adresse email ne peut pas être modifiée.</string>
    <string name="r_le">Rôle</string>
    <string name="locale">Local</string>
    <string name="guide">Guide</string>
    <string name="voyageurs">Voyageur</string>
    <string name="sp_cialit">Spécialité</string>
    <string name="r_gion_servie">Région servie</string>
    <string name="villes_ou_r_gion_servie">Villes ou région servie</string>
    <string name="langue">Langues</string>
    <string name="ex_fran_ais_anglais_arabe">ex : Français, Anglais, Arabe, ...</string>
    <string name="taux_horaire">Taux horaire</string>
    <string name="le_montant_est_en_mad">Le montant est en MAD</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="statut">Statut</string>
    <string name="disponible_pour_des_visites">Disponible pour des visites</string>
    <string name="visible_dans_les_recherches">Visible dans les recherches</string>
    <string name="securite">Sécurité</string>
    <string name="changer_de_mot_de_passe">Changer de mot de passe</string>
    <string name="ajouter_un_spot">Ajouter un Spot</string>
    <string name="ajouter_une_photo">Ajouter des photos</string>
    <string name="nom_du_lieu">Nom du lieu</string>
    <string name="cat_gorie">Catégorie</string>
    <string name="restaurant">Restaurant</string>
    <string name="caf">Café</string>
    <string name="paysage">Paysage</string>
    <string name="culture">Culture</string>
    <string name="shopping">Shopping</string>
    <string name="h_tel">Hôtel</string>
    <string name="descriptions">Description</string>
    <string name="aide_moi_crire">✨ Aide-moi à écrire</string>
    <string name="partagez_votre_exp_rience_ce_que_vous_avez_aim">Partagez votre expérience, ce que vous avez aimé...</string>
    <string name="publier_le_spot">Publier le Spot</string>
    <string name="d_couvrez_des_p_pites_locales">Découvrez des pépites locales</string>
    <string name="connectez_vous_avec_des_habitants">Connectez-vous avec des habitants</string>
    <string name="vivez_des_exp_riences_uniques">Vivez des expériences uniques</string>
    <string name="rechercher_une_ville_un_spot">Rechercher une ville, un spot...</string>
    <string name="tout">Tout</string>
    <string name="itin_raires_du_jour">Itinéraires du Jour</string>
    <string name="nouveaux_spots_proximit">Nouveaux Spots à Proximité</string>
    <string name="guide_local_certifi">Guide Local Certifié</string>
    <string name="contacter">Contacter</string>
    <string name="sp_cialit_s_et_langues">Spécialités et Langues</string>
    <string name="spots_publi_s">Spots publiés</string>
    <string name="aucun_spot_publi_pour_le_moment">Aucun spot publié pour le moment</string>
    <string name="voir_le_profil">Voir le profil</string>
    <string name="guides_locaux">Guides Locaux</string>
    <string name="o_souhaitez_vous_aller">Où souhaitez-vous aller ?</string>
    <string name="d_couvrez_nos_experts_locaux">Découvrez nos Experts locaux</string>
    <string name="en">Anglais</string>
    <string name="fr">Français</string>
    <string name="lng_choice">Choisir la langue</string>
    <string name="entrer_ville_ou_place">Entrez une ville ou un lieu</string>
    <string name="cliquer_recherche">Veuillez cliquer sur la loupe pour valider la localisation</string>
    <string name="pub_en_cours">Publication en cours…</string>
    <string name="loc_trouvee">Localisation trouvée ! ✅</string>
    <string name="loc_introuvee">Lieu introuvable ❌ Essayez d\'être plus précis (Ajoutez la ville)</string>
    <string name="error_cnx">Erreur de connexion internet</string>
    <string name="error_user_not_cncted">Erreur : Utilisateur non connecté</string>
    <string name="error_info_guide">Veuillez remplir les informations du guide</string>
    <string name="profile_guide_success">Profil et Guide mis à jour avec succès !</string>
    <string name="erreur">Erreur </string>
    <string name="profile_success">Profil mis à jour avec succès !</string>
    <string name="remplir_tous">Veuillez tout remplir </string>
    <string name="error_pwd">Les nouveaux mots de passe ne correspondent pas </string>
    <string name="condition_pwd">Le mot de passe doit contenir au moins 6 caractères </string>
    <string name="success_pwd">Mot de passe modifié avec succès ! </string>
    <string name="erreur_update">Erreur mise à jour : </string>
    <string name="pwd_incorrect">L\'ancien mot de passe est incorrect </string>
    <string name="guide_introuvable">Erreur : Guide introuvable </string>
    <string name="no_phone">Impossible d\'ouvrir le téléphone </string>
    <string name="no_number">Numéro de téléphone non disponible </string>
    <string name="email_re">Entrez votre email dans la case ci-dessus pour réinitialiser. </string>
    <string name="cnx_success">Connexion réussie ! </string>
    <string name="email_envoyer">Email de réinitialisation envoyé ! </string>
    <string name="info_pers">informations personnelles </string>
    <string name="lang">Langue </string>
    <string name="theme">Thème </string>
    <string name="decnx">Déconnexion </string>
    <string name="msg_dcnx">Voulez-vous vraiment vous déconnecter ? </string>
    <string name="annuler">Annuler </string>
    <string name="log_out">Déconnecter</string>
    <string name="clair">Mode clair</string>
    <string name="sombre">Mode sombre</string>
    <string name="choix_theme">Choisir le thème</string>
    <string name="cmpt_success">Compte créé avec succès !</string>
    <string name="no_spot">Erreur : Spot introuvable !</string>
    <string name="rate">Note prise en compte :</string>
    <string name="open_chat">Ouvrir le chat avec le créateur…</string>
    <string name="partage_msg">Regarde ce spot incroyable sur Bienvenidos : </string>
    <string name="send">Partager via</string>
    <string name="send_error">Erreur de partage</string>
    <string name="user_no_cnx">Erreur : Utilisateur non connecté</string>
    <string name="user_not_found">Profil introuvable</string>
    <string name="loading_error">Erreur de chargement</string>
    <string name="activer">Activées</string>
    <string name="mes_spots_sur_carte">Mes spots sur carte</string>
    <string name="a_not_votre_spot">"a noté votre spot "</string>
    <string name="a_partager_votre_spot">a partager votre spot</string>
    <string name="accueil">Accueil</string>
    <string name="attention">Mode Invité</string>
    <string name="guest_message">Connectez-vous pour accéder à votre profil, vos favoris et au chat.</string>
    <string name="les_mieux_not_s">Les mieux notés</string>
    <string name="nouveaux_spots">Nouveaux Spots</string>

</resources>