<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp"
    android:background="@color/background_app"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devenir_un_guide"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/_14sdp"/>

    <EditText
        android:id="@+id/specialities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/specialiter"
        android:layout_marginBottom="@dimen/_8sdp"/>

    <EditText
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/langues"
        android:layout_marginBottom="@dimen/_8sdp"/>

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ville_desservie"
        android:layout_marginBottom="@dimen/_8sdp"/>

    <EditText
        android:id="@+id/Rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tarif_horaire_mad"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/tele"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/votre_num_ros_de_t_l_phone"
        android:inputType="numberDecimal"/>

</LinearLayout>