<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/background_app">

    <LinearLayout
        android:id="@+id/entete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_8sdp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_12sdp"
            android:src="@drawable/petitlogo"
/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guides_locaux"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/surface_card"
        app:layout_constraintTop_toBottomOf="@+id/entete"
        app:cardElevation="@dimen/_2sdp"
        app:strokeWidth="0dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        >

        <EditText
            android:id="@+id/searchField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/o_souhaitez_vous_aller"
            android:textColorHint="@color/gray_light"
            android:textColor="@color/text_primary"
            android:drawableStart="@android:drawable/ic_menu_search"
            android:textSize="15sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionSearch" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/bannerphoto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_26sdp"
        app:layout_constraintTop_toBottomOf="@+id/searchContainer"
        android:layout_marginTop="@dimen/_20sdp"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/Textnormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/d_couvrez_nos_experts_locaux"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewGuides"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:backgroundTint="@color/background_app"
        app:layout_constraintTop_toBottomOf="@id/Textnormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>